agregue diapo de imagenes a diseños

--- a/css1/estilo.css
+++ b/css1/estilo.css
@@ -35,6 +35,10 @@ a{
 
 /*Estilos del main*/
 
+.subtitulo1{
+    text-align: center;
+}
+
 h3{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: x-large;
@@ -80,7 +84,7 @@ body{
     background-color: white; 
 }
 body:hover{
-    background-color: #45484a;
+    background-color: #686b6d;
     transition: all 2s;
 }
 /*FOOTER*/
