--- a/css1/estilo.css
+++ b/css1/estilo.css
@@ -1,175 +1,3 @@
-/*Estilos de el header y el nav*/
-
-header{
-    border: 4px black solid;
-    background: linear-gradient(#60d4ea, #020202);
-    
-}
 
 
-h1{
-    color: white  ;
-    text-align: center;
-    font-family: cursive;
-    font-size: 50px;
-}
-
-/*Todo lo que es centro de navegación de los html*/
-
-.index1{
-    list-style: none;
-    display: inline;
-    font-family: cursive;
-}
-a{
-    color: white;
-    margin-left: 10px;
-}
-
-.ulNav{
-    position: sticky;
-    top: 0px;
-    text-align: center;
-    padding: 10px;
-}
-
-/*Estilos del main*/
-
-.subtitulo1{
-    text-align: center;
-}
-
-h3{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-large;
-}
-p{
-    font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.parrafoGral{ /*Edicion parrafo inicio*/
-    font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
-    border-bottom: 4px black dotted;
-    padding-bottom: 45px;
-    padding-left: 5px;
-}
-
-/*Edición de imagenes*/
-img{
-    width: 300px;
-    height: 400px;
-    box-sizing:border-box;
-}
-/* edicon imagenes de tienda y diseños*/
-.imagenes{
-    width: 300px;
-    height: 300px;
-    box-sizing:border-box;
-}
-
-/*PREGUNTAS/CUIDADOS*/
-
-ul{
-    list-style: image-set("https://www.pngitem.com/pimgs/m/79-794138_fire-icon-png-flame-icon-png-transparent-png.png");
-}
-
-li{
-    font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-/*BODY*/
-body{
-    background-color: white; 
-}
-body:hover{
-    background-color: #686b6d;
-    transition: all 2s;
-}
-/*FOOTER*/
-
-.footer{
-    background-color: black;    
-}
-.parrafoFooter{
-    color: whitesmoke;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: smaller;
-}
-
-/*FORMULARIO DE CONTACTO*/
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/*DEGRADE DE CAJA, COLOR TITULO Y SOMBRA*/
-
-.contenedor{
-    background: linear-gradient(#020202, #60d4ea, #020202);
-    width: 400px;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 4px;
-    font-family: 'Roboto', sans-serif;
-    color: rgb(255, 255, 255);
-    box-shadow: 7px 13px 37px rgb(255, 222, 35);
-}
-
-/*TAMAÑO Y UBICACION DEL TIRULO*/
-.contenedor h1{
-    font-size: 24px;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    text-align: left;
-    text-transform: uppercase;
-}
-
-/*COLOR DE LAS SUB CAJAS Y SUS BORDES*/
-.control{
-    width: 100%;
-    background-color: #cabfbf;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 20px;
-    border: 1px solid #000000;
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-}
-
-/*BOTONES*/
-.boton{
-    width: 100%;
-    height: 45px;
-    margin-top: 15px;
-    border-radius: 4px;
-    border:none;
-    color: white;
-    text-transform: uppercase;
-    background: linear-gradient(to left top,#60d4ea,#020202, #60d4ea);
-    font-size: 20px;
-}
-
-.boton:hover{
-    cursor:pointer;
-    transform: translateY(-3px);
-    transition: all cubic-bezier(0.215, 0.610, 0.355, 1) .5s;
-}
-
-.boton:active{
-    transform:translateY(3px);
-}
-
-/*TAMAÑO DE LA CAJAS PARA ESCRIBIR*/
-.control:focus{
-    height: 60px;
-}
-
-
-
-
+/*# sourceMappingURL=estilo.css.map */
